--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -338,7 +338,8 @@ span.spoiler:hover a {
     filter: alpha(opacity=65);
 }
 
-.postHeader > a > img:hover, .postFileSearch > a > img:hover, .postHeader > span > a > img:hover {
+.postHeader > a:not(.disabled) > img:hover, .postFileSearch > a:not(.disabled) > img:hover,
+.postHeader > span > a:not(.disabled) > img:hover {
     opacity: 1;
     filter: alpha(opacity=100);
 }
@@ -528,11 +529,16 @@ blockquote.blockquoteThread {
     /**/
 }
 
-.progressBlocking {
+progress.progressBlocking {
     position: fixed;
     z-index: 9970;
     width: 600px;
     height: 50px;
+}
+
+a.progressBlocking {
+    position: fixed;
+    z-index: 9980;
 }
 
 /*span.spoiler, span.spoiler a <- Board*/
