--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -94,10 +94,8 @@
         <% include settings() %>
         <br />
         <% include navbar() %>
-        <% if ( !content.searchApiKey.empty() ) %>
-            <br />
-        <% end %>
-        <% include searchAction("Top") %>
+        <br />
+        <% include searchAction() %>
         <% if ( !content.bannerFileName.empty() ) %>
             <br />
         <% end %>
@@ -126,10 +124,6 @@
         <% include pages() %>
         <hr />
         <% include navbar() %>
-        <% if ( !content.searchApiKey.empty() ) %>
-            <br />
-        <% end %>
-        <% include searchAction("Bottom") %>
         <a id="bottom"></a>
     </body>
 </html>
