--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -74,8 +74,8 @@
 <div class="navbar">
     <% foreach board in boards %>
         <% item %>
-        <span class="navbarItem">[<a href="/<%= sitePathPrefix %><%= board.name %>"
-              title="<%= board.title %>"><%= board.name %></a>] </span>
+            <span class="navbarItem">[<a href="/<%= sitePathPrefix %><%= board.name %>"
+                  title="<%= board.title %>"><%= board.name %></a>] </span>
         <% end %>
     <% empty %>
     <% end %>
@@ -83,33 +83,20 @@
 </div>
 <% end template %>
 
-<% template searchAction(std::string position) %>
-<% if ( !content.searchApiKey.empty() ) %>
-    <div class="searchAction">
-        <input type="hidden" id="hideSearchFormText" value="<%= hideSearchFormText %>" />
-        <input type="hidden" id="showSearchFormText" value="<%= showSearchFormText %>" />
-        <div>
-            [<a id="showHideSearchFormButton<%= position %>"
-                href="javascript:lord.showHideSearchForm('<%= position %>');">
-                <%= showSearchFormText %>
-            </a>]
-        </div>
-        <script>
-            (function() {
-                var gcse = document.createElement("script");
-                gcse.type = "text/javascript";
-                gcse.async = true;
-                gcse.src = (document.location.protocol == "https:" ? "https:" : "http:") +
-                    "//www.google.com/cse/cse.js?cx=<%= searchApiKey %>";
-                var s = document.getElementsByTagName("script")[0];
-                s.parentNode.insertBefore(gcse, s);
-            })();
-        </script>
-        <div id="searchForm<%= position %>" class="searchFormInvisible">
-            <gcse:search></gcse:search>
-        </div>
-    </div>
-<% end %>
+<% template searchAction() %>
+<div class="searchAction">
+    <input id="searchFormInputQuery" type="text" class="input" maxlength="<%= maxSearchQueryLength %>" name="query"
+           size="43" onkeypress="lord.searchKeyPress(event);" placeholder="<%= searchInputPlaceholder %>" />
+    <select id="searchFormSelectBoard" class="select">
+        <option value="*" selected="true">[*] <%= allBoardsText %></option>
+        <%foreach board in boards %>
+            <% item %>
+                <option value="<%= board.name %>">[<%= board.name %>] <%= board.title %></option>
+            <% end %>
+        <% end %>
+    </select>
+    <button class="button" onclick="javascript:lord.doSearch();"><%= searchButtonText %></button>
+</div>
 <% end template %>
 
 <% template baseTexts() %>
