--- a/src/lib/template/not_found.tmpl
+++ b/src/lib/template/not_found.tmpl
@@ -13,10 +13,8 @@
         <% include settings() %>
         <br />
         <% include navbar() %>
-        <% if ( !content.searchApiKey.empty() ) %>
-            <br />
-        <% end %>
-        <% include searchAction("Top") %>
+        <br />
+        <% include searchAction() %>
         <div class="theTitle">
             <h1><%= notFoundMessage %></h1>
         </div>
