Fix; update version; update ChangeLog

--- a/src/lib/template/search.tmpl
+++ b/src/lib/template/search.tmpl
@@ -61,6 +61,10 @@
                             </div>
                         </li>
                     <% end %>
+                <% empty %>
+                    <div class="sectionHeader">
+                        <h3><%= nothingFoundMessage %></h3>
+                    </div>
                 <% end %>
             </ol>
         <% else %>
