--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -2,6 +2,16 @@
     Base
 */
 
+@media only screen and (max-width: 768px) {
+    body {
+        -moz-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+        text-size-adjust: 100%;
+        font-size: 16px;
+    }
+}
+
 body {
     background-color: #EEEEEE;
 }
