--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -264,5 +264,6 @@
         <file>static/img/video_mp4_logo.png</file>
         <file>static/img/video_ogg_logo.png</file>
         <file>static/img/video_webm_logo.png</file>
+        <file>static/img/add.png</file>
     </qresource>
 </RCC>
