--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -32,7 +32,7 @@
             <br />
             _<i><%= italics %></i>_
             <br />
-            //<i><%= italics %></i>//
+            ///<i><%= italics %></i>///
             <br />
             [i]<i><%= italics %></i>[/i]
             <br /><br />
